Added README.md. Modified .gitignore to ignore .settings. Modified javascript to point to preview instead of dev.

--- a/javascript/sdk-basics/keys/index.html
+++ b/javascript/sdk-basics/keys/index.html
@@ -4,7 +4,7 @@
         <h1>Keys Tutorial</h1>
     </head>
     <body>
-        <script src='https://dev-api.ionic.com/jssdk/latest/Libs/sdk.bundle.js'></script>
+        <script src='https://preview-api.ionic.com/jssdk/latest/Libs/sdk.bundle.js'></script>
         <script src='keys.js'></script>
         <br>
         <h3 style="color:gray">Check the web console for output.</h3>
