--- a/javascript/sdk-basics/agents/index.html
+++ b/javascript/sdk-basics/agents/index.html
@@ -4,7 +4,7 @@
         <h1>Agents Tutorial</h1>
     </head>
     <body>
-        <script src='https://dev-api.ionic.com/jssdk/latest/Libs/sdk.bundle.js'></script>
+        <script src='https://preview-api.ionic.com/jssdk/latest/Libs/sdk.bundle.js'></script>
         <script src='agents.js'></script>
         <br>
         <h3 style="color:gray">Check the web console for output.</h3>
