Modified Javascript tutorials for new enrollment. Modified README's to reflect changes.

--- a/javascript/sdk-basics/keys/index.html
+++ b/javascript/sdk-basics/keys/index.html
@@ -1,12 +1,15 @@
 <html>
-    <head>
-        <title>Ionic - Keys Tutorial</title>
-        <h1>Keys Tutorial</h1>
-    </head>
-    <body>
-        <script src='https://preview-api.ionic.com/jssdk/latest/Libs/sdk.bundle.js'></script>
-        <script src='keys.js'></script>
-        <br>
-        <h3 style="color:gray">Check the web console for output.</h3>
-    </body>
+  <head>
+      <title>Keys Tutorial</title>
+  </head>
+  <body>
+    <h1>Keys Tutorial</h1>
+    <script src='../../consoleReroute.js'></script>
+
+    <script src='https://api.ionic.com/jssdk/latest/libs/sdk.bundle.js'></script>
+    <script src='keys.js'></script>
+  
+    <p id="output-area">
+    </p>
+  </body>
 </html>
