JavaScript profiles with enrollment.

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,10 +1,22 @@
 <html>
   <head>
-    <title>Javascript Tutorials</title>
-  </head> 
+    <title>Machina Javascript Samples</title>
+  </head>
   <body>
-    <h2>Javascript Tutorials</h2>
+    <h2>Machina Javascript Create Device Credentials</h2>
+    <p>
+      You will need to enroll your device. To do that you need to specifiy the keyspace and 
+      tenant ID in jssdkConfig.js.
+    </p>
     <ul>
+      <li><a href="enroll-device/index.html">enroll-device</a></li>
+    </ul>
+    <h2>Machina Javascript Samples</h2>
+    <p>
+      <b>Warning:</b> You need to create device credentails before executing the samples below.
+    </p>
+    <ul>
+      <li><a href="sdk-basics/profiles/index.html">Profiles Tutorial</a></li>
       <li><a href="sdk-basics/agents/index.html">Agent Tutorial</a></li>
       <li><a href="sdk-basics/keys/index.html">Key Tutorial</a></li>
       <li><a href="sdk-basics/ionic-ciphers/index.html">Ciphers Tutorial</a></li>
