Updated index.html and README.md

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,11 +9,12 @@
       tenant ID in jssdkConfig.js.
     </p>
     <ul>
-      <li><a href="enroll-device/index.html">enroll-device</a></li>
+      <li><a href="enroll-device/index.html">Enroll Device</a></li>
     </ul>
     <h2>Machina Javascript Samples</h2>
     <p>
-      <b>Warning:</b> You need to create device credentails before executing the samples below.
+      <b>Warning:</b> You need to create device credentails by enrolling your device  before
+      executing the samples below.
     </p>
     <ul>
       <li><a href="sdk-basics/profiles/index.html">Profiles Tutorial</a></li>
