--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,25 +1,24 @@
 <html>
   <head>
-    <title>Machina Javascript Samples</title>
+    <title>Machina Javascript Tutorials</title>
   </head>
   <body>
     <h2>Machina Javascript Create Device Credentials</h2>
     <p>
-      You will need to enroll your device. To do that you need to specifiy the keyspace and 
-      tenant ID in jssdkConfig.js.
+      You will need to enroll your device before executing the tutorials below.
     </p>
     <ul>
       <li><a href="enroll-device/index.html">Enroll Device</a></li>
     </ul>
-    <h2>Machina Javascript Samples</h2>
+    <h2>Machina Javascript Tutorials</h2>
     <p>
-      <b>Warning:</b> You need to create device credentails by enrolling your device  before
+      <b>Warning:</b> You need to create device credentials by enrolling your device  before
       executing the samples below.
     </p>
     <ul>
       <li><a href="sdk-basics/profiles/index.html">Profiles Tutorial</a></li>
-      <li><a href="sdk-basics/agents/index.html">Agent Tutorial</a></li>
-      <li><a href="sdk-basics/keys/index.html">Key Tutorial</a></li>
+      <li><a href="sdk-basics/agents/index.html">Agents Tutorial</a></li>
+      <li><a href="sdk-basics/keys/index.html">Keys Tutorial</a></li>
       <li><a href="sdk-basics/ionic-ciphers/index.html">Ciphers Tutorial</a></li>
     </ul>
   </body>
