--- a/javascript/sdk-basics/profiles/index.html
+++ b/javascript/sdk-basics/profiles/index.html
@@ -7,7 +7,7 @@
     <script src='../../consoleReroute.js'></script>
 
     <script src='https://api.ionic.com/jssdk/latest/libs/sdk.bundle.js'></script>
-    <script src='profiles.js'></script>
+    <script type='module' src='profiles.js'></script>
   
     <p id="output-area">
     </p>
