--- a/javascript/sdk-basics/agents/index.html
+++ b/javascript/sdk-basics/agents/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-      <title>Agent Tutorial</title>
+    <title>Agent Tutorial</title>
   </head>
   <body>
     <h1>Agent Tutorial</h1>
     <script src='../../consoleReroute.js'></script>
 
     <script src='https://api.ionic.com/jssdk/latest/libs/sdk.bundle.js'></script>
-    <script src='agents.js'></script>
+    <script type="module" src='agents.js'></script>
   
     <p id="output-area">
     </p>
