Changed blank to _blank.

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,7 +8,7 @@
       You will need to enroll your device before executing the tutorials below.
     </p>
     <ul>
-      <li><a href="enroll-device/index.html" target="blank">Enroll Device</a></li>
+      <li><a href="enroll-device/index.html" target="_blank">Enroll Device</a></li>
     </ul>
     <h2>Machina Javascript Tutorials</h2>
     <p>
@@ -16,11 +16,11 @@
       executing the samples below.
     </p>
     <ul>
-      <li><a href="sdk-basics/profiles/index.html" target="blank">Profiles Tutorial</a></li>
-      <li><a href="sdk-basics/agents/index.html" target="blank">Agents Tutorial</a></li>
-      <li><a href="sdk-basics/keys/index.html" target="blank">Keys Tutorial</a></li>
-      <li><a href="sdk-basics/encryption/index.html" target="blank">Encryption Tutorial</a></li>
-      <li><a href="sdk-basics/ionic-ciphers/index.html" target="blank">Ciphers Tutorial</a></li>
+      <li><a href="sdk-basics/profiles/index.html" target="_blank">Profiles Tutorial</a></li>
+      <li><a href="sdk-basics/agents/index.html" target="_blank">Agents Tutorial</a></li>
+      <li><a href="sdk-basics/keys/index.html" target="_blank">Keys Tutorial</a></li>
+      <li><a href="sdk-basics/encryption/index.html" target="_blank">Encryption Tutorial</a></li>
+      <li><a href="sdk-basics/ionic-ciphers/index.html" target="_blank">Ciphers Tutorial</a></li>
     </ul>
   </body>
 </html>
