--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <title>Machina Javascript Tutorials</title>
+    <title>Machina JavaScript Tutorials</title>
   </head>
   <body>
-    <h2>Machina Javascript Create Device Credentials</h2>
+    <h2>Machina JavaScript Create Device Credentials</h2>
     <p>
       You will need to enroll your device before executing the tutorials below.
     </p>
     <ul>
       <li><a href="enroll-device/index.html" target="_blank">Enroll Device</a></li>
     </ul>
-    <h2>Machina Javascript Tutorials</h2>
+    <h2>Machina JavaScript Tutorials</h2>
     <p>
       <b>Warning:</b> You need to create device credentials by enrolling your device  before
       executing the samples below.
